After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732273 - Memory leak in arvgcpropertynode.c / _get_value_data() - line 189
Memory leak in arvgcpropertynode.c / _get_value_data() - line 189
Status: RESOLVED FIXED
Product: aravis
Classification: Other
Component: Genicam
0.3.x
Other Linux
: Normal normal
: ---
Assigned To: aravis-maint
aravis-maint
Depends on:
Blocks:
 
 
Reported: 2014-06-26 10:30 UTC by Werner Zeindl-Nagele
Modified: 2014-08-20 19:20 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Werner Zeindl-Nagele 2014-06-26 10:30:16 UTC
g_string_free (string, FALSE) in function _get_value_data(..) has to be called with argument TRUE, otherwise the character data of the g_string object will not be freed (see glib v2.32.4 reference manual)

Memory leak detected in aravis v0.3.1 with valgrind v3.7.0 on Ubuntu 12.04-32bit (precise) kernel 3.5.0-51-generic.
Comment 1 Emmanuel Pacaud 2014-08-20 19:20:31 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.