gc_property_node: fix memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=732273